# SHAI

./: README.md
shell-ai/: .gitignore  pyproject.toml
shell-ai/shell_ai/: __init__.py  animations.py  config.py  main.py  providers.py  setup.py  ui.py
